--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "mocha": "node_modules/.bin/mocha --opts ./mocha.opts './src/**/*.spec.ts'",
     "prepublish": "yarn build",
     "test": "yarn outdated && yarn check --integrity && yarn lint && yarn test-specs-for-only && yarn mocha && yarn karma && yarn build",
-    "test-specs-for-only": "node config/test-specs-for-only.js"
+    "test-specs-for-only": "node_modules/.bin/forbidden 'src/**/*.spec.ts' -p describe.only it.only"
   },
   "repository": {
     "type": "git",
@@ -31,17 +31,18 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@samwise-tech/core": "^0.1.0",
+    "@samwise-tech/core": "^0.1.1",
     "@types/parsimmon": "1.3.0",
     "parsimmon": "1.6.2"
   },
   "devDependencies": {
-    "@samwise-tech/immutable": "^0.0.2",
+    "@samwise-tech/forbidden-patterns": "0.1.1",
+    "@samwise-tech/immutable": "^0.1.0",
     "@samwise-tech/tslint-config": "0.4.1",
     "@types/chai": "4.0.4",
-    "@types/lodash": "4.14.78",
-    "@types/mocha": "2.2.43",
-    "@types/node": "8.0.46",
+    "@types/lodash": "4.14.82",
+    "@types/mocha": "2.2.44",
+    "@types/node": "8.0.50",
     "chai": "4.1.2",
     "circular-dependency-plugin": "4.2.1",
     "core-js": "2.5.1",
@@ -55,11 +56,11 @@
     "lodash": "4.17.4",
     "mocha": "4.0.1",
     "monet": "0.9.0-alpha.4",
-    "ts-loader": "3.0.5",
+    "ts-loader": "3.1.1",
     "ts-node": "3.3.0",
     "tslib": "1.8.0",
     "tslint": "5.8.0",
-    "typescript": "2.5.3",
+    "typescript": "2.6.1",
     "webpack": "3.8.1"
   },
   "peerDependencies": {
