--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "karma": "node_modules/.bin/karma start config/karma.conf.js",
     "lint": "node_modules/.bin/tslint --project tsconfig.tslint.json --format verbose './src/**/*.ts'",
     "mocha": "node_modules/.bin/mocha --opts ./mocha.opts './src/**/*.spec.ts'",
+    "mocha:tdd": "yarn mocha --watch --reporter min",
     "prepublish": "yarn build",
     "test": "yarn outdated && yarn check --integrity && yarn lint && yarn test-specs-for-only && yarn mocha && yarn karma && yarn build",
     "test-specs-for-only": "node_modules/.bin/forbidden 'src/**/*.spec.ts' -p describe.only it.only"
@@ -40,9 +41,9 @@
     "@samwise-tech/immutable": "^1.0.0",
     "@samwise-tech/tslint-config": "1.0.2",
     "@types/chai": "4.1.2",
-    "@types/lodash": "4.14.95",
-    "@types/mocha": "2.2.47",
-    "@types/node": "9.3.0",
+    "@types/lodash": "4.14.104",
+    "@types/mocha": "2.2.48",
+    "@types/node": "9.4.6",
     "chai": "4.1.2",
     "circular-dependency-plugin": "4.4.0",
     "core-js": "2.5.3",
@@ -53,15 +54,15 @@
     "karma-mocha-reporter": "2.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-webpack": "2.0.9",
-    "lodash": "4.17.4",
-    "mocha": "5.0.0",
+    "lodash": "4.17.5",
+    "mocha": "5.0.1",
     "monet": "0.9.0-alpha.4",
-    "ts-loader": "3.3.1",
+    "ts-loader": "3.5.0",
     "ts-node": "4.1.0",
     "tslib": "1.9.0",
     "tslint": "5.9.1",
-    "typescript": "2.6.2",
-    "webpack": "3.10.0"
+    "typescript": "2.7.2",
+    "webpack": "3.11.0"
   },
   "peerDependencies": {
     "@samwise-tech/immutable": "^1.0.0",
