--- a/package.json
+++ b/package.json
@@ -32,37 +32,37 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@samwise-tech/core": "^1.0.0",
+    "@samwise-tech/core": "^1.2.0-rc.1",
     "@types/parsimmon": "1.6.1",
-    "parsimmon": "1.6.4"
+    "parsimmon": "1.7.0"
   },
   "devDependencies": {
     "@samwise-tech/forbidden-patterns": "1.0.2",
-    "@samwise-tech/immutable": "^1.0.0",
+    "@samwise-tech/immutable": "^1.0.3",
     "@samwise-tech/tslint-config": "1.0.3",
     "@types/chai": "4.1.2",
     "@types/lodash": "4.14.104",
     "@types/mocha": "2.2.48",
-    "@types/node": "9.4.6",
+    "@types/node": "9.4.7",
     "chai": "4.1.2",
     "circular-dependency-plugin": "4.4.0",
     "core-js": "2.5.3",
-    "immutable": "^3.8.0",
+    "immutable": "^3.8.1",
     "karma": "2.0.0",
     "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "2.2.0",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
-    "karma-phantomjs-launcher": "1.0.4",
     "karma-webpack": "2.0.13",
     "lodash": "4.17.5",
-    "mocha": "5.0.1",
+    "mocha": "5.0.4",
     "monet": "0.9.0-alpha.4",
-    "ts-loader": "4.0.0",
-    "ts-node": "5.0.0",
+    "ts-loader": "4.0.1",
+    "ts-node": "5.0.1",
     "tslib": "1.9.0",
     "tslint": "5.9.1",
     "typescript": "2.7.2",
-    "webpack": "4.0.1"
+    "webpack": "4.1.1"
   },
   "peerDependencies": {
     "@samwise-tech/immutable": "^1.0.0",
