--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -1,8 +1,9 @@
 {
   "extends": "./tsconfig",
   "compilerOptions": {
-    "declaration": true
+    "declaration": true,
+    "outDir": "lib"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/**/*spec.ts", "src/polyfills.ts"]
+  "exclude": ["node_modules", "src/**/*spec.ts"]
 }
