--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@samwise-tech/core": "^1.2.0-rc.1",
+    "@samwise-tech/core": "^1.2.0",
     "@types/parsimmon": "1.6.1",
     "parsimmon": "1.7.0"
   },
