--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "mocha": "mocha --opts ./mocha.opts './src/**/*.spec.ts'",
     "mocha:tdd": "yarn mocha --watch --reporter min",
     "prepublish": "yarn build",
-    "test": "yarn outdated && yarn check --integrity && yarn lint && yarn test-specs-for-only && yarn mocha && yarn karma && yarn build",
+    "test": "yarn check --integrity && yarn lint && yarn test-specs-for-only && yarn mocha && yarn karma && yarn build",
     "test-specs-for-only": "forbidden 'src/**/*.spec.ts' -p describe.only it.only"
   },
   "repository": {
