--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint --project tsconfig.tslint.json --format verbose './src/**/*.ts'",
     "mocha": "mocha --opts ./mocha.opts './src/**/*.spec.ts'",
     "mocha:tdd": "yarn mocha --watch --reporter min",
-    "prepublish": "yarn build",
+    "prepublishOnly": "yarn build",
     "test": "yarn check --integrity && yarn lint && yarn test-specs-for-only && yarn mocha && yarn karma && yarn build",
     "test-specs-for-only": "forbidden 'src/**/*.spec.ts' -p describe.only it.only"
   },
@@ -30,7 +30,8 @@
   "homepage": "https://github.com/samwise-tech/search-ql#readme",
   "engines": {
     "node": ">=8",
-    "npm": ">=5"
+    "npm": ">=5",
+    "yarn": ">=1"
   },
   "dependencies": {
     "@samwise-tech/core": "^1.2.2",
