--- a/package.json
+++ b/package.json
@@ -34,40 +34,40 @@
     "yarn": ">=1"
   },
   "dependencies": {
-    "@samwise-tech/core": "^1.2.2",
-    "@types/parsimmon": "1.6.1",
-    "parsimmon": "1.7.0"
+    "@samwise-tech/core": "^1.2.5",
+    "@samwise-tech/immutable": "^1.1.1",
+    "@types/parsimmon": "^1.6.2",
+    "parsimmon": "^1.7.3"
   },
   "devDependencies": {
-    "@samwise-tech/forbidden-patterns": "1.0.2",
-    "@samwise-tech/immutable": "^1.1.0",
-    "@samwise-tech/tslint-config": "1.0.3",
-    "@types/chai": "4.1.2",
-    "@types/lodash": "4.14.105",
-    "@types/mocha": "2.2.48",
-    "@types/node": "9.4.7",
+    "@samwise-tech/forbidden-patterns": "1.0.3",
+    "@samwise-tech/tslint-config": "1.0.5",
+    "@types/chai": "4.1.3",
+    "@types/lodash": "4.14.108",
+    "@types/mocha": "5.2.0",
+    "@types/node": "10.0.8",
     "chai": "4.1.2",
-    "circular-dependency-plugin": "4.4.0",
-    "core-js": "2.5.3",
-    "immutable": "^3.8.1",
-    "karma": "2.0.0",
+    "circular-dependency-plugin": "5.0.2",
+    "core-js": "2.5.6",
+    "immutable": "^3.8.2",
+    "karma": "2.0.2",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "2.2.0",
+    "karma-firefox-launcher": "1.1.0",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
     "karma-webpack": "3.0.0",
-    "lodash": "4.17.5",
-    "mocha": "5.0.4",
+    "lodash": "4.17.10",
+    "mocha": "5.1.1",
     "monet": "0.9.0-alpha.4",
-    "ts-loader": "4.1.0",
-    "ts-node": "5.0.1",
+    "ts-loader": "4.3.0",
+    "ts-node": "6.0.3",
     "tslib": "1.9.0",
-    "tslint": "5.9.1",
-    "typescript": "2.7.2",
-    "webpack": "4.1.1"
+    "tslint": "5.10.0",
+    "typescript": "2.8.3",
+    "webpack": "4.8.1"
   },
   "peerDependencies": {
-    "@samwise-tech/immutable": "^1.1.0-rc.0",
     "immutable": "^3.8.0",
     "monet": "0.9.0-alpha.4"
   }
