--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
     // --strict
     "alwaysStrict": true,
     "noImplicitAny": true,
-    "noImplicitThis": true,
+    "noImplicitThis": true
     // "strictNullChecks": true, // can not be used due to wrong immutable typings
     // "strictFunctionTypes": true,
-     "strictPropertyInitialization": true
+    // "strictPropertyInitialization": true
   },
   "exclude": ["node_modules", "lib"]
 }
