PC-1293: LIKE operator's testing, and Term expression types

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "karma": "karma start config/karma.conf.js",
     "lint": "tslint --project tsconfig.tslint.json --format verbose './src/**/*.ts'",
     "mocha": "mocha --opts ./mocha.opts './src/**/*.spec.ts'",
-    "mocha:tdd": "yarn mocha --watch --reporter min",
+    "mocha:tdd:full": "yarn mocha --watch",
+    "mocha:tdd": "yarn mocha:tdd:full --reporter min",
     "prepublishOnly": "yarn build",
     "test": "yarn check --integrity && yarn lint && yarn test-specs-for-only && yarn mocha && yarn karma && yarn build",
     "test-specs-for-only": "forbidden 'src/**/*.spec.ts' -p describe.only it.only"
