--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -5,5 +5,5 @@
     "outDir": "lib"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/**/*spec.ts", "src/testing/**/*"]
+  "exclude": ["node_modules", "src/**/*spec.ts"]
 }
