--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "dependencies": {
     "@samwise-tech/core": "^2.0.3",
     "@types/parsimmon": "^1.10.0",
+    "chrono-node": "^1.3.5",
+    "date-fns": "^1.29.0",
     "immutable": "^3.8.2",
     "monet": "0.9.0-alpha.4",
     "parsimmon": "^1.12.0"
