--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es5",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
 
     // --strict
     "alwaysStrict": true,
@@ -24,5 +25,6 @@
     "strictFunctionTypes": true,
     // "strictPropertyInitialization": true
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "lib"]
 }
