--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   },
   "dependencies": {
     "@samwise-tech/core": "^2.0.3",
+    "@types/big.js": "4.0.5",
     "@types/parsimmon": "^1.10.0",
+    "big.js": "5.2.1",
     "chrono-node": "^1.3.5",
     "date-fns": "^1.29.0",
     "immutable": "^3.8.2",
