Preserve const enums

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,11 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmitHelpers": true,
+    "noErrorTruncation": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "preserveConstEnums": true,
     "sourceMap": true,
     "target": "es5",
     "typeRoots": ["./src/types", "./node_modules/@types"],
